--- a/mid/style1.css
+++ b/mid/style1.css
@@ -51,7 +51,7 @@ padding: 10px;
 #register{
     
     height: 100vh;
-    background-image: url(image.png);
+    background-image: url(photo/image.png);
     
     background-size: 65%;
     
